syntax = "proto3";

package msg;

import "gogo.proto";

option(gogoproto.goproto_getters_all) = false;

// ============================================================================

// NO msg should be defined here
// !!! ONLY common data-structures

// ============================================================================

// 玩家简要信息
message PlayerSimpleInfo {
    string Id       = 1 [(gogoproto.jsontag) = ""];
    string Name     = 2 [(gogoproto.jsontag) = ""];
    int32  Lv       = 3 [(gogoproto.jsontag) = ""];
    int32  Exp      = 4 [(gogoproto.jsontag) = ""];
    string Head     = 5 [(gogoproto.jsontag) = ""];
    int32  HFrame   = 6 [(gogoproto.jsontag) = ""];
    int32  Vip      = 7 [(gogoproto.jsontag) = ""];
    int32  SvrId    = 8 [(gogoproto.jsontag) = ""];
    int32  AtkPwr   = 9 [(gogoproto.jsontag) = ""];
    string GName    = 10 [(gogoproto.jsontag) = ""];
    int32  ShowHero = 11 [(gogoproto.jsontag) = ""];
}

// 货币
message Ccy {
    int32 Id  = 1;
    int64 Val = 2;
}

// 道具
message Item {
    int32 Id  = 1; // 表 Id
    int32 Num = 2; // 数量
}

// 英雄
message Hero {
    int64             Seq      = 1;  // 序号
    int32             Id       = 2;  // 表 Id
    int32             Lv       = 3;  // 等级
    int32             Star     = 4;  // 星级
    Trinket           Trinket  = 5;  // 饰品
    map<int32, float> Props    = 6;  // 属性列表
    bool              Locked   = 7;  // 锁定
    int32             AtkPwr   = 8;  // 战力
    int32             ChangeId = 9;  // 英雄即将转换id
    int32             Skin     = 10; // 当前皮肤
}

// 英雄详情(加装备)
message HeroDetail {
    Hero              Hero   = 1; // 英雄
    repeated int32    Armors = 2; // 身上装备(id)
    map<int32, int32> Relic  = 3; // 身上神器(id,star)
}

message Trinket {
    int32          Lv    = 1;
    repeated int32 Props = 2;
}

// 装备
message Armor {
    int64 Seq     = 1; // 序号
    int32 Id      = 2; // 表 Id
    int64 HeroSeq = 3; // 穿戴英雄Seq
}

message Relic {
    int64 Seq     = 1;
    int32 Id      = 2;
    int32 Star    = 3; // 星级
    int32 Xp      = 4; // 当前经验
    int64 HeroSeq = 5; // 穿戴英雄Seq
}

// 奖励
message Rewards {
    repeated Ccy   Ccy    = 1; // 货币
    repeated Item  Items  = 2; // 道具
    repeated int64 Heroes = 3; // 英雄 Seq 数组
    repeated int64 Relics = 4; // 神器 seq 数组
}

// 队伍布阵
message TeamFormation { map<int64, int32> Formation = 1; }

message BattleFighter {
    int64             Seq    = 1 [(gogoproto.jsontag) = ""];
    int32             Id     = 2 [(gogoproto.jsontag) = ""];
    int32             Lv     = 3 [(gogoproto.jsontag) = ""];
    int32             Star   = 4 [(gogoproto.jsontag) = ""];
    map<int32, float> Props  = 5 [(gogoproto.jsontag) = ""];
    int32             Pos    = 6 [(gogoproto.jsontag) = ""]; // start from 0
    int32             AtkPwr = 7 [(gogoproto.jsontag) = ""]; // hero atkpower
    int32             Skin   = 8 [(gogoproto.jsontag) = ""];
}

message BattleTeam {
    PlayerSimpleInfo       Player   = 1;
    repeated BattleFighter Fighters = 2;
}

message BattleInput {
    BattleTeam          T1   = 1;
    BattleTeam          T2   = 2;
    map<string, string> Args = 3; // battle args
}

message BattleResult {
    int32               Winner = 1; // 1: left wins;  2: right wins
    map<string, string> Args   = 2; // return args
}

message BattleReplay {
    string       Id = 1;
    int64        Ts = 2;
    BattleInput  Bi = 3;
    BattleResult Br = 4;
}

// loading page info
message ForLoading {}
